Fixed text align, sizes, and responsivness for the footer and the hero section

--- a/src/components/Pages/HomeSections/footer/HomeFooterStyle.module.scss
+++ b/src/components/Pages/HomeSections/footer/HomeFooterStyle.module.scss
@@ -11,7 +11,6 @@ $breakpoint-small: 576px;
     align-items: center;
     position: relative;
     background-color: var(--notFound-btn);
-    gap: 2rem;
 
     &__mainArea {
         width: 69rem;
@@ -46,7 +45,6 @@ $breakpoint-small: 576px;
         }
 
         p {
-            font-size: 0.8rem;
             color: var(--white);
         }
     }
@@ -60,17 +58,19 @@ $breakpoint-small: 576px;
     &__bottomArea {
         display: flex;
         justify-content: flex-end;
-        width: 73%;
+        width: 81%;
+        margin-top: 1rem;
         margin-bottom: 2rem;
     }
-
     hr {
         width: 100%;
+        opacity: 30%;
     }
 
     &__arrowUp {
         display: flex;
         align-items: center;
+        width: 7rem;
     }
 }
 
@@ -87,10 +87,10 @@ $breakpoint-small: 576px;
             font-size: 2.7rem;
         }
         &__bottomArea {
-            width: 80%;
+            width: 86%;
         }
         &__arrowUp {
-            width: 2.5rem;
+            width: 2rem;
         }
     }
 }
@@ -117,7 +117,7 @@ $breakpoint-small: 576px;
 }
 
 // Large screens (up to 1024px)
-@media screen and (min-width: $breakpoint-medium) and (max-width: $breakpoint-large) {
+@media screen and (min-width: $breakpoint-medium) and (max-width: ($breakpoint-large + 1)) {
     .footer {
         &__mainArea {
             width: 46.5rem;
@@ -129,7 +129,7 @@ $breakpoint-small: 576px;
             font-size: 3.6rem;
         }
         &__bottomArea {
-            width: 76%;
+            width: 72%;
         }
         &__arrowUp {
             width: 2rem;
@@ -150,7 +150,7 @@ $breakpoint-small: 576px;
             font-size: 4rem;
         }
         &__bottomArea {
-            width: 79%;
+            width: 93%;
         }
     }
 }
@@ -168,7 +168,7 @@ $breakpoint-small: 576px;
             font-size: 4.4rem;
         }
         &__bottomArea {
-            width: 71%;
+            width: 82%;
         }
     }
 }
